# psykoosi

./: .cproject  .gitignore  .gitmodules  .project  CMakeCache.txt  CMakeLists.txt  Makefile  README  REASONING  analysis.h  cmake_install.cmake  dfuzz.pages  disassemble.cpp  fileformats.cpp  fuzz_notes  loading.cpp  logging.cpp  logging.h  main.cpp  modules.cpp  rebuild.cpp  rebuild.h  recent_notes  todo  virtualmemory.cpp  virtualmemory.h
Debug/: makefile  objects.mk  sources.mk
depends/: CMakeLists.txt  Makefile  cmake_install.cmake
depends/asmjit/: CMakeLists.txt  Makefile  cmake_install.cmake
depends/asmjit/test/: main  main.cpp
depends/capstone/: Makefile
depends/capstone.old/: Makefile  cmake_install.cmake  test  test_arm  test_arm64  test_arm_regression  test_detail  test_iter  test_mips  test_ppc  test_skipdata  test_sparc  test_systemz  test_x86  test_xcore
depends/capstone.old/arch/X86/: X86DisassemblerDecoder.h
depends/capstone/arch/X86/: X86Disassembler.c
depends/lua/: CMakeLists.txt  lvm.c
depends/pe_bliss/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  pe_base.cpp  pe_base.h  pe_bliss.h
depends/pe_bliss/pe_lib/: .pe_structures.h.swp  pe_base.cpp  pe_checksum.cpp  pe_properties_generic.cpp  pe_relocations.cpp  pe_section.h
depends/pe_bliss/samples/: sample.mak
depends/pe_bliss/samples/full_pe_rebuilder/: main.cpp
depends/pe_bliss/samples/redirect/: main.cpp  main.cpp~  msg.dis  redirect
depends/pe_bliss/samples/relocation_adder/: main.cpp
depends/pe_bliss/samples/relocations_reader/: .main.cpp.swp  main.cpp
depends/pe_bliss/samples/sections_and_addresses/: .main.cpp.kate-swp
depends/swig/: CMakeLists.txt
depends/swig/Include/: swigconfig.h
depends/swig/Modules/: main.cxx
depends/udis86/: Makefile  cmake_install.cmake
include/capstone/: x86.h
include/pe_lib/: pe_properties.h  pe_properties_generic.h
psykoosi/: CMakeCache.txt  CMakeLists.txt  Makefile  analysis.cpp  apiproxy_client.cpp  apiproxy_client.h  cmake_install.cmake  disassemble.cpp  disassemble.h  distribution.cpp  emu_hooks.cpp  emu_hooks.h  emulation.cpp  emulation.h  files  fuzz  fuzz.cpp  loading.cpp  loading.h  main.cpp  modules.h  msg.exe.analysis.cache  msg.exe.disasm.cache  msg.exe.vmem.cache  out.sc  polymorph.cpp  polymorph.h  psykoosi  rebuild.cpp  rebuild.h  structures.h  utilities.cpp  utilities.h  virtualmemory.cpp  virtualmemory.h
psykoosi/xen/: compile.sh  x86_emulate.c
psykoosi/xen/backup/: x86_emulate.c  xen-x86_32.h  xen-x86_64.h
psykoosi/xen/backup2/: xen-x86_32.h
psykoosi_lib/: CMakeLists.txt  analysis.cpp  analysis.h  disassemble.cpp  disassemble.h  emulation.cpp  emulation.h  loading.cpp  loading.h  psy.i  psykoosi.cpp  psykoosi.h  psykoosi.i  rebuild.cpp  rebuild.h  structures.h  virtualmemory.cpp  virtualmemory.h
psykoosi_lib/xen/: x86_emulate.c
psylua/: CMakeLists.txt  main.cpp  nops.lua
server/dfuzz/: config  dev  dfuzz.sql  dfuzz.start.sql  nanomsg_dfuzz.cpp  ngx_http_dfuzz_module.c  non-byte_array.cpp  py  pycomp  recreate  recreate.cpp  stack_95.rar  utils.c  wtf  zmq_dfuzz  zmq_dfuzz.cpp
server/dfuzz.nano/: nanomsg  nanomsg_dfuzz.cpp  nanomsg_dfuzz2.cpp  ngx_http_dfuzz_module.c  py.cpp  recreate  recreate.cpp  recreate_original  uh  utils.h
tests/src/: dllt.c  dlltload.cpp
