
add_definitions(-DSWIG_LIB="${PROJECT_SOURCE_DIR}/depends/swig/Lib/")
add_executable (swig
                    DOH/void.c
                    DOH/file.c
                    DOH/list.c
                    DOH/base.c
                    DOH/hash.c
                    DOH/string.c
                    DOH/memory.c
                    DOH/fio.c
                    Preprocessor/cpp.c
                    Preprocessor/expr.c
                    Swig/misc.c
                    Swig/include.c
                    Swig/extend.c
                    Swig/naming.c
                    Swig/deprecate.c
                    Swig/error.c
                    Swig/wrapfunc.c
                    Swig/parms.c
                    Swig/typesys.c
                    Swig/stype.c
                    Swig/tree.c
                    Swig/typemap.c
                    Swig/cwrap.c
                    Swig/typeobj.c
                    Swig/fragment.c
                    Swig/symbol.c
                    Swig/scanner.c
                    Swig/getopt.c
                    CParse/util.c
                    CParse/cscanner.c
                    CParse/templ.c
                    CParse/parser.c
                    
                    Modules/chicken.cxx
                    Modules/allocate.cxx
                    Modules/browser.cxx
                    Modules/tcl8.cxx
                    Modules/octave.cxx
                    Modules/swigmain.cxx
                    Modules/d.cxx
                    Modules/lua.cxx
                    Modules/nested.cxx
                    Modules/r.cxx
                    Modules/python.cxx
                    Modules/csharp.cxx
                    Modules/php.cxx
                    Modules/lang.cxx
                    Modules/javascript.cxx
                    Modules/cffi.cxx
                    Modules/typepass.cxx
                    Modules/mzscheme.cxx
                    Modules/s-exp.cxx
                    Modules/guile.cxx
                    Modules/directors.cxx
                    Modules/perl5.cxx
                    Modules/ruby.cxx
                    Modules/module.cxx
                    Modules/clisp.cxx
                    Modules/pike.cxx
                    Modules/xml.cxx
                    Modules/go.cxx
                    Modules/uffi.cxx
                    Modules/emit.cxx
                    Modules/java.cxx
                    Modules/contract.cxx
                    Modules/main.cxx
                    Modules/ocaml.cxx
                    Modules/allegrocl.cxx
                    Modules/overload.cxx
                    Modules/modula3.cxx
                    Modules/utils.cxx
                )
